--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
+    "ejs": "^3.1.10",
     "express": "^4.21.1",
+    "express-session": "^1.18.1",
     "morgan": "^1.10.0",
     "pg": "^8.13.1",
     "typeorm": "^0.3.20"
